fix: draggable on mobile and more reactive desktop dragging

--- a/src/components/EateryCardContent.module.css
+++ b/src/components/EateryCardContent.module.css
@@ -61,14 +61,12 @@
     height: 100%;
     right: 0;
     top: 0;
+    box-sizing: border-box;
     width: 40%;
     object-fit: cover;
     object-position: left;
     z-index: -1;
     /* filter: saturate(0.7); */
     opacity: 0.5;
-    mask-image: linear-gradient(110deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 1) 20%);
-}
-:global(.card--song-active) .card-content__song-image {
-    opacity: 1;
+    mask-image: linear-gradient(108deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 1) 20%);
 }
